--- a/photovel/WebContent/admin/include/header.html
+++ b/photovel/WebContent/admin/include/header.html
@@ -1,7 +1,7 @@
 <%@ page contentType="text/html; charset=UTF-8"%>
 
-<%-- 추가 js, jquery 파일은 이곳에 등록합니다. -->
-<%-- 추가 js, jquery 파일 end -->
+<%-- 추가 js, jquery 파일은 이곳에 등록합니다. --%>
+<%-- 추가 js, jquery 파일 end --%>
 
 </head>
 
