--- a/photovel/WebContent/bootstrap/css/bootstrap.css
+++ b/photovel/WebContent/bootstrap/css/bootstrap.css
@@ -3988,7 +3988,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: /* #eee */ #e0f0f1;
+  background-color: /* #eee */ #20A8D8;
 }
 .nav > li.disabled > a {
   color: #777;
@@ -4608,13 +4608,13 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #fff;/* #fff; */
+  color: #fff;
   background-color: cadetblue;
 }
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
-  color: #000;/* #fff; */
+  color: #fff;
   background-color: cadetblue;
 }
 .navbar-inverse .navbar-nav > .disabled > a,
@@ -5935,6 +5935,8 @@ button.close {
 .modal-header {
   padding: 15px;
   border-bottom: 1px solid #e5e5e5;
+  background: #20A8D8;
+  color: #fff;
 }
 .modal-header .close {
   margin-top: -2px;
