--- a/photovel/WebContent/bootstrap/css/dashboard.css
+++ b/photovel/WebContent/bootstrap/css/dashboard.css
@@ -44,7 +44,7 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: /* #f5f5f5 */ #fcf3ee;
+    background-color: #263238;/* #f5f5f5 */ /*살구색 #fcf3ee*/
     border-right: 1px solid #eee;
   }
 }
@@ -58,12 +58,12 @@ body {
 .nav-sidebar > li > a {
   padding-right: 20px;
   padding-left: 20px;
+  color: #fff;
 }
 .nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
   color: #fff;
-  background-color: #62b5b9/* #428bca */;
+  background-color: #304047 /* 살구색 #62b5b9/* #428bca */;
 }
 
 
