20170614 admin.jsp 라디오버튼으로 검색

--- a/photovel/WebContent/admin/include/header.html
+++ b/photovel/WebContent/admin/include/header.html
@@ -4,9 +4,7 @@
 <%-- 추가 js, jquery 파일 end --%>
 
 </head>
-
   <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -58,3 +56,5 @@
             <li><a href="">위치정보이용약관</a></li>
           </ul>
         </div>
+      </div>
+    </div>
