0703 어드민 업로드 (국가별 사용현황, 성별 가입현황)

--- a/photovel/WebContent/admin/bootstrap/css/bootstrap.css
+++ b/photovel/WebContent/admin/bootstrap/css/bootstrap.css
@@ -1116,6 +1116,7 @@ img {
   vertical-align: middle;
 }
 .img-responsive,
+.chart-responsive,
 .thumbnail > img,
 .thumbnail a > img,
 .carousel-inner > .item > img,
