--- a/photovel/WebContent/css/reset.css
+++ b/photovel/WebContent/css/reset.css
@@ -39,6 +39,7 @@ text-decoration:none;
 }
 
 img{
+ object-fit: cover;
 vertical-align:top;
 }
 
@@ -54,7 +55,7 @@ input, select, textarea{
 box-sizing: border-box;
 display: block;
 margin:0 auto;
-padding:12px 13px;
+padding:13px;
 width:90%;
 border:0;
 background:#62b5b9;
