--- a/photovel/WebContent/css/sub.css
+++ b/photovel/WebContent/css/sub.css
@@ -8,7 +8,7 @@
 /* story 영역 CSS */
 
 .story-head{position:relative;overflow:hidden;box-sizing:border-box;padding-top:65px; 
-width:100%;height:340px;color:#fff;background-image:url(/images/pic/user-a1.jpg);background-size:cover; background-position: center center;}
+width:100%;height:340px;color:#fff;background-image:url(http://photovel.cdn3.cafe24.com/pic/user-a1.jpg);background-size:cover; background-position: center center;}
 /* a link 색상 */
 .story-head a{color:#fff; }
 .story-head a:hover, .story-head a:active, .story-head a:focus, .story-head a.on{color:#62b5b9;}
@@ -38,7 +38,7 @@ width:100%;height:340px;color:#fff;background-image:url(/images/pic/user-a1.jpg)
 .story-head .story-info ul.btn-wrap.on{display:inline-block;}
 .story-head .story-info ul.btn-wrap li a{display:inline-block; line-height:1.5rem;}
 /*글 제목, 장소, 뷰 타입*/
-.story-head h2.title{margin:3.5rem 0rem 0.2rem;padding:0.5rem 0rem 0rem 0rem;background:url(/images/p/bg-story-title.gif) center top no-repeat;
+.story-head h2.title{margin:3.5rem 0rem 0.2rem;padding:0.5rem 0rem 0rem 0rem;background:url(http://photovel.cdn3.cafe24.com/p/bg-story-title.gif) center top no-repeat;
 font-family:'Montserrat',Sans-serif,'Noto Sans KR', sans-serif;font-size: 1rem;
  font-stretch:condensed; line-height:2rem; font-weight:bold;}
 .story-head h3.place{font-weight:normal;font-size: 1rem;}
